--- a/templates/app/key-value-list-plugin.html
+++ b/templates/app/key-value-list-plugin.html
@@ -9,7 +9,7 @@
 		<table class="key-value-list">
 			<tbody>
 				<tr ng-repeat="(name, value) in tableRows">
-					<td>{{ name }}</td>
+					<td><strong>{{ name }}</strong></td>
 					<td>{{ value }}</td>
 				</tr>
 			</tbody>
