Emphasize the static data plugin key values. Also added handling in for the uptime executable not being installed, which may be the prelude to handling if any of the utilities used are installed or not and to warn the user instead of leaving blank fields.

--- a/templates/app/static-data-plugin.html
+++ b/templates/app/static-data-plugin.html
@@ -6,7 +6,7 @@
 	<table>
 		<tbody ng-repeat="staticItem in staticData">
 			<tr ng-repeat="(key, val) in staticItem.info">
-				<td>{{ key }}</td>
+				<td><strong>{{ key }}</strong></td>
 				<td>{{ val }}</td>
 			</tr>
 		</tbody>
