updated loader to disappear when no data is found. fixes #284.

--- a/templates/app/key-value-list-plugin.html
+++ b/templates/app/key-value-list-plugin.html
@@ -3,7 +3,7 @@
 	last-updated="lastGet"
 	on-refresh="getData()">
     
-	<loader ng-hide="tableRows || emptyResult"></loader>
+	<loader ng-if="!tableRows"></loader>
 
 	<div class="animate" ng-show="tableRows">
 		<table class="key-value-list">
