--- a/templates/app/multi-line-chart-plugin.html
+++ b/templates/app/multi-line-chart-plugin.html
@@ -7,7 +7,7 @@
 
 		<table class="metrics-table" border="0">
 			<tbody>
-				<tr ng-repeat="metric in metrics">
+				<tr ng-repeat="metric in metricsArray">
 					<td>
 						<div 
 							class="metric-square" 
