--- a/templates/modules/download-transfer-rate.html
+++ b/templates/modules/download-transfer-rate.html
@@ -1,6 +1,6 @@
 <multi-line-chart-plugin                
-    heading="CPU Load"
-    module-name="load_avg"
+    heading="Download Transfer Rate"
+    module-name="download_transfer_rate"
     refresh-rate="1000"
     units="units">
 </multi-line-chart-plugin>
