--- a/templates/modules/upload-transfer-rate.html
+++ b/templates/modules/upload-transfer-rate.html
@@ -1,6 +1,6 @@
 <multi-line-chart-plugin                
-    heading="CPU Load"
-    module-name="load_avg"
+    heading="Upload Transfer Rate"
+    module-name="upload_transfer_rate"
     refresh-rate="1000"
     units="units">
 </multi-line-chart-plugin>
