--- a/templates/sections/system-status.html
+++ b/templates/sections/system-status.html
@@ -1,6 +1,8 @@
 <ram-chart></ram-chart>
 <cpu-load-chart></cpu-load-chart>
-<disk-space></disk-space>
+<upload-transfer-rate-chart></upload-transfer-rate-chart>
+<download-transfer-rate-chart></download-transfer-rate-chart>
 <ram-intensive-processes></ram-intensive-processes>
 <cpu-intensive-processes></cpu-intensive-processes>
 <swap-usage></swap-usage>
+<disk-space></disk-space>
