--- a/templates/sections/basic-info.html
+++ b/templates/sections/basic-info.html
@@ -2,4 +2,5 @@
 <memory-info></memory-info> 
 <cpu-info></cpu-info>
 <io-stats></io-stats>
+<cron-history></cron-history>
 <scheduled-crons></scheduled-crons>
