--- a/css/themes.css
+++ b/css/themes.css
@@ -163,37 +163,37 @@ html.old body .plugin .top-bar {
   font-weight: bold;
   height: 40px;
   line-height: 40px;
-  padding: 0 15px;
+  padding: 0 0 0 15px;
   position: relative;
   text-align: left;
   text-transform: none;
 }
 html.old body .plugin .top-bar last-update {
   float: right;
-  margin-left: 10px;
+  margin: 0 10px;
   opacity: 0.8;
 }
 html.old body .plugin .top-bar refresh-btn {
-  position: absolute;
-  right: -5px;
-  top: -5px;
+  float: right;
 }
 html.old body .plugin .top-bar refresh-btn button {
-  background: #27cf42;
-  border: 1px solid #09a81f;
-  color: #006400;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.1) inset, 0px 1px 2px rgba(0, 0, 0, 0.1);
+  color: #555555;
+  cursor: pointer;
   box-shadow: none;
-  display: block;
+  display: inline-block;
   float: none;
   font-size: 14px;
-  line-height: 10px;
-  padding: 0;
-  height: 15px;
-  width: 15px;
+  height: auto;
+  margin: 0 -5px 0 10px;
+  padding: 0 4px;
+  width: auto;
 }
 html.old body .plugin .top-bar refresh-btn button:hover {
-  color: #ffffff;
-  opacity: 0.9;
+  background: #e6e6e6;
 }
 html.old body .plugin .plugin-body {
   border: none;
