--- a/css/themes.css
+++ b/css/themes.css
@@ -150,10 +150,16 @@ html.old body .hero nav-bar ul li a {
 html.old body .hero nav-bar ul li:hover a {
   color: #888888;
 }
+html.old body #plugins {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
 html.old body .plugin {
   border: 1px solid #d5d5d5;
   border-radius: 0 0 5px 5px;
   box-shadow: none;
+  margin: 10px;
 }
 html.old body .plugin .top-bar {
   background: transparent -moz-linear-gradient(center top, #f9f6f1 0%, #f2efea 100%) repeat scroll 0px 0px;
