--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ body {
 #theme-switcher {
   position: fixed;
   top: 25px;
-  right: -375px;
+  right: -320px;
   border-radius: 5px 0px 0px 5px;
   padding: 4px;
   z-index: 999999;
@@ -339,6 +339,8 @@ table.metrics-table {
 canvas {
   float: none;
   margin: 0 auto;
+  height: 30%;
+  width: 70%;
 }
 /*********************************************
     Widget Elements
