--- a/templates/app/multi-line-chart-plugin.html
+++ b/templates/app/multi-line-chart-plugin.html
@@ -3,7 +3,7 @@
 	
 	<div class="plugin-body no-padding">
 
-		<canvas class="canvas" width="300" height="200"></canvas>
+		<canvas class="canvas"></canvas>
 
 		<table class="metrics-table" border="0">
 			<tbody>
