--- a/templates/modules/cpu-load.html
+++ b/templates/modules/cpu-load.html
@@ -1,5 +1,5 @@
 <multi-line-chart-plugin                
-    heading="CPU Load"
+    heading="CPU Avg Load"
     module-name="load_avg"
     units="units">
 </multi-line-chart-plugin>
