--- a/templates/app/base-plugin.html
+++ b/templates/app/base-plugin.html
@@ -1,8 +1,8 @@
 <div class="plugin">
-
 	<top-bar 
 		heading="heading"
-		last-updated="lastGet" 
+		last-updated="lastGet"
+		info="info" 
 		refresh="getData()">
 	</top-bar>
 
