--- a/templates/app/ui-elements/top-bar.html
+++ b/templates/app/ui-elements/top-bar.html
@@ -1,5 +1,10 @@
 <div class="top-bar">
 	<last-update timestamp="lastUpdated"></last-update>
-	{{heading}}
+	<span class="qs">
+		{{ heading }}
+		<span class="popover above" ng-if="info">
+			{{ info }}
+		</span>
+	</span>
 	<refresh-btn refresh="refresh()"></refresh-btn>
 </div>
