--- a/templates/app/line-chart-plugin.html
+++ b/templates/app/line-chart-plugin.html
@@ -4,7 +4,7 @@
 	
 	<div class="plugin-body no-padding">
 
-		<canvas class="canvas"></canvas>
+		<canvas class="canvas" width="400" height="200"></canvas>
 
 		<table border="0" class="metrics-table">
 			<tbody>
