--- a/templates/modules/disk-space.html
+++ b/templates/modules/disk-space.html
@@ -11,7 +11,7 @@
 				<th>Name</th>
 				<th></th>
 				<th>Stats</th>
-				<th>% Full</th>
+				<th>Used</th>
 				<th>Mount Path</th>
 			</tr>
 		</thead>
