--- a/css/theme-old.css
+++ b/css/theme-old.css
@@ -73,7 +73,7 @@ html.old body .hero nav-bar ul li:hover a {
 html.old body #plugins {
   display: flex;
   flex-flow: row wrap;
-  justify-content: flex-start;
+  justify-content: center;
 }
 html.old body .plugin {
   border: 1px solid #d5d5d5;
