add docker processes table
It would be possible to use docker ps and docker top with
--format, but that's not compatible with docker 1.6, e.g. ubuntu 14.04 LTS.

--- a/templates/sections/system-status.html
+++ b/templates/sections/system-status.html
@@ -3,5 +3,6 @@
 <cpu-utilization-chart></cpu-utilization-chart>
 <ram-intensive-processes></ram-intensive-processes>
 <cpu-intensive-processes></cpu-intensive-processes>
+<docker-processes></docker-processes>
 <swap-usage></swap-usage>
 <disk-space></disk-space>
