Add width height for table template

--- a/templates/app/table-data-plugin.html
+++ b/templates/app/table-data-plugin.html
@@ -8,7 +8,7 @@
 
 	<div class="animate" ng-show="tableRows">
 		
-		<table class="table-data-plugin">
+		<table class="table-data-plugin" width="{{ width }}" height="{{ height }}">
 			<thead>
                 <tr class="table-data-filter-container" ng-show="tableRows.length">
                     <th colspan="{{ tableHeaders.length }}" class="filter-container">
