--- a/webapp/main.css
+++ b/webapp/main.css
@@ -8,6 +8,7 @@ html {
   padding-top: 0;
   border-top: 1px solid #4F8EF7;
 
+  background-color: rgba(0,0,0, 0.03);
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
   -ms-transition: all 1s ease;
