added initial pass at making components draggable

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -23,3 +23,13 @@ body {
 .centered {
   margin: 0 auto;
 }
+
+.ld-ghost {
+  opacity: 0.2;
+  background: transparent;
+}
+
+.ld-chosen {
+  opacity: 0.5;
+  background: transparent;
+}
