--- a/src/js/core/features/top-bar/topbar.css
+++ b/src/js/core/features/top-bar/topbar.css
@@ -1,3 +1,17 @@
 .top-bar {
+
+  height: 15px;
+  padding: 15px;
+
+  font-size: 13px;
+  text-transform: capitalize;
+  color: #009587;
   cursor: move;
+
+  background-color: #f6f8f8;
+}
+
+.top-bar .heading {
+  float: left;
+  cursor: default;
 }
