navbar added to save space; cleaner color-scheme; added html entity for 3-vertical bars.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,8 +1,3 @@
-* {
-  font-family: 'Merriweather', Arial, sans-serif;
-  letter-spacing: .1rem;
-}
-
 html {
   margin-top: 0px;
   padding-top: 0;
@@ -15,7 +10,10 @@ html {
 }
 
 body {
+  letter-spacing: .1rem;
+  font-family: 'Merriweather', Arial, sans-serif;
   padding: 0;
+  margin: 0;
 }
 
 .centered {
