minimize plugin supported now. with localStorage sticky session

--- a/src/js/core/features/plugin/plugin.css
+++ b/src/js/core/features/plugin/plugin.css
@@ -30,6 +30,10 @@
   background-color: rgba(0,0,0,0.015);
 }
 
+.plugin-hidden {
+  width: 250px;
+}
+
 .plugin-no-resize {
   resize: none;
   padding-bottom: 0;
