charts now use plugin directive; they can now be minimized as well

--- a/src/css/tables.css
+++ b/src/css/tables.css
@@ -34,3 +34,7 @@ table tbody tr:hover td {
 table.metrics-table {
   text-align: center;
 }
+
+table.metrics-table tr:last-child td {
+  border: none;
+}
