--- a/src/css/plugins-cotnainer.css
+++ b/src/css/plugins-cotnainer.css
@@ -1,3 +1,11 @@
+#plugins {
+  text-align: center;
+  padding: 20px;
+  padding-top: 0;
+  margin-top: 0;
+  border: 1px;
+}
+
 @media (min-width: 1080px) {
   #plugins {
     float: none;
