race condition with manual/btn based width toggle resolved

--- a/src/js/core/features/plugin/plugin.css
+++ b/src/js/core/features/plugin/plugin.css
@@ -43,6 +43,15 @@
     max-height: 323px;
   }
 
+  .plugin-enlarged {
+    width: 80%;
+  }
+}
+
+@media (max-width: 950px) {
+  .plugin-enlarged {
+    width: 90%;
+  }
 }
 
 .plugin.chart-plugin {
