--- a/src/js/core/features/plugin/plugin.css
+++ b/src/js/core/features/plugin/plugin.css
@@ -27,6 +27,11 @@
   width: 250px;
 }
 
+.plugin-hidden .top-bar .heading {
+  color: grey;
+  font-style: italic;
+}
+
 .plugin-enlarged {
   width: 50%;
 }
