navbar style update to be more mature

--- a/src/js/core/features/navbar/navbar.css
+++ b/src/js/core/features/navbar/navbar.css
@@ -1,21 +1,21 @@
 nav-bar {
   display: block;
   background-color: #f6f8f8;
-  height: 50px;
+  height: 40px;
   padding-left: 25px;
-  padding-top: 10px;
+  padding-top: 3px;
 }
 
 nav-bar ul {
-  margin-left: 40px;
+  margin-left: 10px;
   padding: 0;
   list-style-type: none;
   display: inline;
 }
 
 nav-bar ul li a {
-  font-size: 16px;
-  text-transform: capitalize;
+  font-size: 11px;
+  text-transform: uppercase;
   text-decoration: none;
   line-height: 2.3rem;
   color: grey;
@@ -25,22 +25,28 @@ nav-bar ul li a:hover {
   color: rgb(0,0,0);
 }
 
+nav-bar ul li.active {
+  border-bottom: 2px solid #009587;
+}
+
 nav-bar ul li.active a {
   color: #009587;
-  text-decoration: underline;
 }
 
 nav-bar ul li {
   margin-left: 20px;
   display: inline;
+  padding-left: 5px;
+  padding-bottom: 10px;
 }
 
 nav-bar .title {
-  color: rgb(34, 34, 34);
+  color: #009587;
   font-weight: 300;
-  font-size: 25px;
+  font-size: 20px;
   letter-spacing: .1rem;
   float: left;
+  padding-top: 5px;
 }
 
 nav-bar .right-content {
