--- a/src/js/core/features/plugin/plugin.css
+++ b/src/js/core/features/plugin/plugin.css
@@ -56,7 +56,7 @@
 
 .plugin.chart-plugin {
   padding: 0px;
-  resize: none;
+  #resize: none;
   padding-bottom: 0;
 }
 
@@ -77,7 +77,7 @@
 }
 
 .plugin-body-short {
-  height: 263px;
+  height: 294px;
 }
 
 .plugin last-update{
